<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.au.mad21fall.assignment2.au690736.DetailsActivity">

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:gravity="center_horizontal"
        android:text="@string/movie_title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/year"
        android:layout_width="57dp"
        android:layout_height="29dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="56dp"
        android:text="@string/year"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/genreImage"
        app:layout_constraintStart_toEndOf="@+id/Year"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="65dp"
        android:layout_height="29dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="46dp"
        android:text="@string/genre"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/genreImage"
        app:layout_constraintStart_toEndOf="@+id/Genre"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <ImageView
        android:id="@+id/genreImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/plot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/plot"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Plot" />

    <TextView
        android:id="@+id/imdbRating"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/imdb_rating"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ImdbRating"
        app:layout_constraintTop_toBottomOf="@+id/plot" />

    <TextView
        android:id="@+id/userRating"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/UserRating"
        app:layout_constraintTop_toBottomOf="@+id/imdbRating" />

    <TextView
        android:id="@+id/userNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNotes" />

    <Button
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNotes" />

    <Button
        android:id="@+id/rate"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNotes" />

    <TextView
        android:id="@+id/Year"
        android:layout_width="60dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/Year"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <TextView
        android:id="@+id/Genre"
        android:layout_width="60dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/Genre"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Year" />

    <TextView
        android:id="@+id/Plot"
        android:layout_width="60dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="26dp"
        android:text="@string/Plot"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Genre" />

    <TextView
        android:id="@+id/ImdbRating"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Imdb_rating"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plot" />

    <TextView
        android:id="@+id/UserRating"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/User_rating"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImdbRating" />

    <TextView
        android:id="@+id/UserNotes"
        android:layout_width="185dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/User_notes"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserRating" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toStartOf="@+id/rate"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/userNotes" />
</androidx.constraintlayout.widget.ConstraintLayout>